<resources>
    <string name="app_name" translatable="false">Epicture</string>

    <string name="user_info_pref">UserInfo</string>

    <string name="delete_action">Delete post</string>
    <string name="delete_warning">Are you sure you want to delete ?</string>

    <!-- Settings -->

    <string name="theme_category">Theme</string>
    <string name="feed_category">Picture Feed</string>
    <string name="search_category">Search</string>
    <string name="favorite_category">Favorite</string>
    <string name="hello">Hello %1$s !</string>

    <string name="grid_layout">Grid view</string>
    <string name="grid_layout_hint">Enable grid view for all feed.</string>

    <string name="grid_columns">Number of columns</string>
    <string name="grid_columns_hint">Number of columns in Grid View.</string>

    <string name="favorite_sort">Favorite Sort</string>
    <string name="favorite_sort_hint">You can sorted by older and newest</string>

    <string-array name="favorite_sorts">
        <item>Old</item>
        <item>Recent</item>
    </string-array>

    <string-array name="favorite_sorts_alias">
        <item>oldest</item>
        <item>newest</item>
    </string-array>

    <string name="feed_section">Feed type</string>
    <string name="feed_section_hint">You can choose between hot, user and top section</string>

    <string-array name="feed_sections">
        <item>Hot</item>
        <item>User</item>
        <item>Top</item>
    </string-array>

    <string-array name="feed_sections_alias">
        <item>hot</item>
        <item>user</item>
        <item>top</item>
    </string-array>

    <string name="low_data">Data Saving</string>
    <string name="low_data_hint">If enabled the images will be in low quality</string>

    <string name="feed_sort">Feed sort</string>
    <string name="feed_sort_hint">You can sort by viral, top and time</string>

    <string-array name="feed_sorts">
        <item>Most Viral</item>
        <item>Top Post</item>
        <item>Time</item>
    </string-array>

    <string-array name="feed_sorts_alias">
        <item>viral</item>
        <item>top</item>
        <item>time</item>
    </string-array>

    <string name="search_sort">Search sort</string>
    <string name="search_sort_hint">You can sorted by viral, top and time</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_hint">Enable Dark Mode.</string>
    <string name="commentary_sort">Recent Comments</string>
    <string name="commentary_sort_hint">If enabled, the comments will be sorted by the most recent</string>

    <!-- Modal upload -->

    <string name="modal_upload_title">Title</string>
    <string name="modal_upload_title_hint">Title</string>
    <string name="modal_upload_description">Description</string>
    <string name="modal_upload_description_hint">Description</string>
    <string name="modal_upload_button">Upload</string>

    <string name="modal_upload_choose">Choose an action</string>
    <string name="camera_action">Take a picture</string>
    <string name="file_explorer_action">Take a picture in gallery</string>

    <string name="action_favorite">Favorite</string>
    <string name="action_search">Search</string>
    <string name="nav_item1">My Account</string>
    <string name="my_favorite">My Favorite</string>
    <string name="nav_item2">My Pictures</string>
    <string name="nav_item3">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_account_setting">Account Setting</string>

    <string name="upload_success">Your photo was successfully upload</string>

    <string name="title_post" translatable="false">&lt;b>%1$s&lt;/b> %2$s</string>

    <string name="error_request">Oops, couldn\'t load data</string>

    <string name="modal_comment_title">Make a comment !</string>
    <string name="add_comment_hint">Type your comment !</string>
    <string name="send_comment">Post</string>

    <string name="home">Home</string>

    <string name="sort">Sort By</string>
    <string name="newer">Newer</string>
    <string name="oldest">Older</string>
    <string name="most_view">Most View</string>
    <string name="most_like">Most like</string>
    <string name="sort_username">Username (Ascending)</string>

    <plurals name="numberOfView">
        <item quantity="zero">%s View</item>
        <item quantity="one">%s View</item>
        <item quantity="other">%s Views</item>
    </plurals>

    <plurals name="numberOfComments">
        <item quantity="one">See all reviews</item>
        <item quantity="other">See all %d reviews</item>
    </plurals>

    <plurals name="small_seconds_elapsed">
        <item quantity="one">%ds</item>
        <item quantity="other">%ds</item>
    </plurals>

    <plurals name="small_minutes_elapsed">
        <item quantity="one">%dm</item>
        <item quantity="other">%dm</item>
    </plurals>

    <plurals name="small_hours_elapsed">
        <item quantity="one">%dh</item>
        <item quantity="other">%dh</item>
    </plurals>

    <plurals name="small_days_elapsed">
        <item quantity="one">%dd</item>
        <item quantity="other">%dd</item>
    </plurals>

    <plurals name="small_year_elapsed">
        <item quantity="one">%dy</item>
        <item quantity="other">%dy</item>
    </plurals>

    <plurals name="commentCount">
        <item quantity="one">%d Comment</item>
        <item quantity="other">%d Comments</item>
    </plurals>


    <plurals name="seconds_elapsed">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>

    <plurals name="minutes_elapsed">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>

    <plurals name="hours_elapsed">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="days_elapsed">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <plurals name="year_elapsed">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>

    <!-- Account Settings -->

    <string name="your_email">Your email: </string>
    <string name="mature_content">Show mature content</string>
    <string name="publish_private_or_public">Publish image in public</string>
    <string name="messaging_enabled">Allow private message</string>
    <string name="newsletter_subscribed">Subscribe to the newsletter</string>

    <string name="default_album_privacy">Default privacy level for album:</string>
    <string name="hidden_type">Hidden</string>
    <string name="public_type">Public</string>
    <string name="secret_type">Secret</string>
    <string name="save">Save</string>
    <string name="title_activity_post_comment">Commentaries</string>

    <!-- Comments -->

    <string name="author">written by &lt;b>%1$s&lt;/b></string>
    <string name="title_activity_post_details">Details</string>

</resources>
