<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/basic_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_sort" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:layout_marginTop="@dimen/basic_margin"
            android:layout_marginStart="@dimen/basic_margin"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/sort_newer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/newer" />

        <RadioButton
            android:id="@+id/sort_older"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/oldest" />

        <RadioButton
            android:id="@+id/sort_most_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/most_view" />

        <RadioButton
            android:id="@+id/sort_like"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/most_like" />

        <RadioButton
            android:id="@+id/sort_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sort_username" />

    </RadioGroup>

</LinearLayout>