<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="compose"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:shortcutShortLabel="@string/action_favorite"
        android:shortcutLongLabel="@string/action_favorite"
        android:shortcutDisabledMessage="@string/action_favorite">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="brice_bastien.epicture"
            android:targetClass="brice_bastien.epicture.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="compose1"
        android:enabled="true"
        android:icon="@drawable/ic_search_white"
        android:shortcutShortLabel="@string/action_search"
        android:shortcutLongLabel="@string/action_search"
        android:shortcutDisabledMessage="@string/action_search">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="brice_bastien.epicture"
            android:targetClass="brice_bastien.epicture.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>


    <shortcut
        android:shortcutId="compose2"
        android:enabled="true"
        android:icon="@drawable/ic_account_white"
        android:shortcutShortLabel="@string/nav_item1"
        android:shortcutLongLabel="@string/nav_item1"
        android:shortcutDisabledMessage="@string/nav_item1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="brice_bastien.epicture"
            android:targetClass="brice_bastien.epicture.AccountSetting" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>